[package]
name = "ok_schroedinger"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "ok_schroedinger"
crate-type = ["cdylib"]

[dependencies]
num = "0.4.3"
numpy = "0.28.0"
num-complex = "*"
pyo3 = { version = "0.28.2", features = ["num-complex"] }
